--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "angular-datatables": "15.0.0",
     "@swimlane/ngx-charts": "^20.1.2",
     "firebase": "^9.15.0",
     "ngx-gauge": "^6.0.0",
